Working on RNN & NLP

--- a/3. CNN & ComputerVision.ipynb
+++ b/3. CNN & ComputerVision.ipynb
@@ -189,6 +189,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make Predictions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -594,6 +601,22 @@
     "# model2.save(\"3b) dog_vs_cats.h5\")\n",
     "new_model2 = tf.keras.models.load_model('3b) dog_vs_cats.h5')\n",
     "\n",
+    "print(\"accuracy:\", new_model2.evaluate(test_batches, steps = 20)[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Make predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "COLOR = 'white'\n",
     "plt.rcParams['text.color'] = COLOR\n",
     "plt.rcParams['axes.labelcolor'] = COLOR\n",
@@ -635,15 +658,6 @@
     "            return int(num)\n",
     "        else:\n",
     "            print('Try again...')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"accuracy:\", new_model2.evaluate(test_batches, steps = 20)[1])"
    ]
   },
   {
